--- a/floraltheme.css
+++ b/floraltheme.css
@@ -105,9 +105,9 @@ form {
 }
 
 #blog {
-    background:#f7beb5;
     border-color:#f7beb5;
-    border: 3px solid ;
+    border: 3px solid;
+    background: rgba(0, 0, 0, 0.3);
     color:#f7beb5;
 }
 
