--- a/floraltheme.css
+++ b/floraltheme.css
@@ -36,7 +36,7 @@ body {
 }
 
 .blog div{
-    color: f7beb5;
+    color: white;
     margin-bottom: 10px;
 }
 
@@ -54,7 +54,7 @@ body {
 }
 
 .topRight.blogPost {
-    color: #f7beb5;
+    color: #white;
     float: right;
     width: calc( 75% - 20px );
     padding: 1px;
@@ -83,7 +83,7 @@ h4 {
 }
 
 .boxInfo {
-    Color:white
+    Color:white;
     border-color:#f7beb5;
     border: 3px solid ;
     margin-bottom: 20px;
