--- a/floraltheme.css
+++ b/floraltheme.css
@@ -123,6 +123,8 @@ form {
 
 /* flower gif for the smsg, block, report, add, remove are from https://www.fg-a.com" (Free Gifs - Animations - Clipart) */
 
+/* This theme is made by "sophie" more can be found at: https://github.com/sophie-zhangg/my-space-windows-93-themes */
+
 #sMsg {
     background-image: url(https://www.fg-a.com/flowers-animated/1-pink-flowers-animated.gif);
     background-size: 12%;
