--- a/softholographic.css
+++ b/softholographic.css
@@ -1,3 +1,5 @@
+/* Start https://www.cursors-4u.com */ * {cursor: url(https://ani.cursors-4u.net/nature/nat-11/nat1046.cur), auto !important;} /* End https://www.cursors-4u.com */
+
 div#header {
     color: white;
     background-image: url(https://i.pinimg.com/originals/ab/e2/af/abe2af5da4b213bab53ef5f136c0112d.jpg);
