--- a/softholographic.css
+++ b/softholographic.css
@@ -2,7 +2,7 @@
 
 div#header {
     color: white;
-    background-image: url(https://i.pinimg.com/originals/ab/e2/af/abe2af5da4b213bab53ef5f136c0112d.jpg);
+    background-image: url(https://49.media.tumblr.com/79fe2a4106d6e23b4a19b0cc0b142ae5/tumblr_n8guvcqOU91rtieoxo1_500.gif);
     background-position: 150px;
     text-align: center;
 }
