--- a/softholographic.css
+++ b/softholographic.css
@@ -2,7 +2,7 @@
 
 div#header {
     color: white;
-    background-image: url(https://49.media.tumblr.com/79fe2a4106d6e23b4a19b0cc0b142ae5/tumblr_n8guvcqOU91rtieoxo1_500.gif);
+    background-image: url(https://data.whicdn.com/images/342108134/original.gif);
     background-position: 150px;
     text-align: center;
 }
