Changed cursor to fit theme better

--- a/softholographic.css
+++ b/softholographic.css
@@ -1,5 +1,4 @@
-/* Start https://www.cursors-4u.com */ * {cursor: url(https://ani.cursors-4u.net/nature/nat-11/nat1046.cur), auto !important;} /* End https://www.cursors-4u.com */
-
+/* Start https://www.cursors-4u.com */ * {cursor: url(https://cur.cursors-4u.net/nature/nat-11/nat1022.cur), auto !important;} /* End https://www.cursors-4u.com */
 div#header {
     color: white;
     background-image: url(https://data.whicdn.com/images/342108134/original.gif);
