Update username credit in comment

--- a/holidaytheme.css
+++ b/holidaytheme.css
@@ -1,4 +1,4 @@
-/* Credit by adding "Holiday Theme Made by "sophie": https://sophie-zhangg.github.io/my-space-windows-93-themes/holidaytheme.css" to your "About me" or in a blog post*/
+/* Credit by adding "Holiday Theme Made by "sophie": https://sophiezhng.github.io/my-space-windows-93-themes/holidaytheme.css" to your "About me" or in a blog post*/
 
 /* Start http://www.cursors-4u.com */ * {cursor: url(https://cur.cursors-4u.net/holidays/hol-5/hol417.cur), auto !important;} /* End http://www.cursors-4u.com */
 
@@ -128,7 +128,7 @@ form {
 
 }
 
-/* This theme is made by "sophie" more can be found at: https://github.com/sophie-zhangg/my-space-windows-93-themes */
+/* This theme is made by "sophie" more can be found at: https://github.com/sophiezhng/my-space-windows-93-themes */
 
 #sMsg {
     background-image: url(https://www.animatedimages.org/data/media/357/animated-christmas-tree-image-0315.gif);
