Spelling error correction

--- a/sweettooth.css
+++ b/sweettooth.css
@@ -5,7 +5,7 @@
 }
 
 .logo::after{
-    content:"cotten candy heart ❤";
+    content:"cotton candy heart ❤";
     text-shadow: 2px 2px 4px #000;
     color: #fff;
     line-height: 10px;
