Change header base color
To match the theme better, from the default blue to pink instead

--- a/sweettooth.css
+++ b/sweettooth.css
@@ -16,6 +16,7 @@
 
 div#header {
     background-image: url(https://i.ibb.co/sK8Mz3C/tumblr-ef48b504d330d0eed928069280ab15cc-d950e318-400.jpg);
+    background-color: #FF69B4;
     background-position: 0px -200px;
     text-align: center;
     font-family: "Courier New", monospace;
