--- a/cottagecore.css
+++ b/cottagecore.css
@@ -207,6 +207,10 @@ a {
     color: #B0E1FF
 }
 
+a:visited {
+  color: #ffe194;
+}
+
 @keyframes shake{
 0% {
 transform:translate(1px,1px) rotate(0deg);
