--- a/cottagecore.css
+++ b/cottagecore.css
@@ -211,6 +211,10 @@ a:visited {
   color: #ffe194;
 }
 
+#sMsg, #block, #report, #add, #remove {
+    color: #ffe194;
+{
+      
 @keyframes shake{
 0% {
 transform:translate(1px,1px) rotate(0deg);
