--- a/cottagecore.css
+++ b/cottagecore.css
@@ -205,6 +205,8 @@ a:visited {
   color: #ffe194;
 }
 
+::selection { background: #FFB6C175; }
+
 #sMsg, #block, #report, #add, #remove {
     color: #ffe194;
 }
