--- a/cottagecore.css
+++ b/cottagecore.css
@@ -103,7 +103,7 @@ body {
 .fwiendCount {
     color: #ffe194;
 }
-
+/* This theme is made by "sophie" more can be found at: https://sophiezhng.github.io/my-space-windows-93-themes */
 .fwiendFace img {
      border: 2px solid white;
      border-radius: 50%;
