--- a/softholographic.css
+++ b/softholographic.css
@@ -26,7 +26,7 @@ body {
     background-size: 33%;
     background-position: 150px;
 }
-
+/* This theme is made by "sophie" more can be found at: https://sophiezhng.github.io/my-space-windows-93-themes */
 .topLeft {
     animation-duration:1.5s;
     animation-name:slidein;
