--- a/sweettooth.css
+++ b/sweettooth.css
@@ -78,7 +78,7 @@ body {
     font-size: 0px;
     opacity: 1;
 }
-
+/* This theme is made by "sophie" more can be found at: https://sophiezhng.github.io/my-space-windows-93-themes */
 .topLeft{
     margin-top: 20px;
     background-repeat: no-repeat
