--- a/cottagecore.css
+++ b/cottagecore.css
@@ -105,23 +105,23 @@ body {
 }
 /* This theme is made by "sophie" more can be found at: https://sophiezhng.github.io/my-space-windows-93-themes */
 .fwiendFace img {
-     border: 2px solid white;
-     border-radius: 50%;
-     background-position: center;
-     display: absolute;
-     object-fit: cover;
-     height: 100px;
-     width: 100px;
+    border: 2px solid white;
+    border-radius: 50%;
+    background-position: center;
+    display: absolute;
+    object-fit: cover;
+    height: 100px;
+    width: 100px;
 }
 
 .tableLeft img{
-     border: 2px solid white;
-     border-radius: 50%;
-     background-position: center;
-     display: absolute;
-     object-fit: cover;
-     height: 100px;
-     width: 100px;
+    border: 2px solid white;
+    border-radius: 50%;
+    background-position: center;
+    display: absolute;
+    object-fit: cover;
+    height: 100px;
+    width: 100px;
 }
 
 .tableRight{
@@ -213,53 +213,53 @@ a:hover {
 
 #sMsg, #block, #report, #add, #remove {
     color: #ffe194;
-    background-image: url(https://i.ibb.co/4VXfcQ6/tumblr-60b30b85e6658b8b4db0b00c5e8d77f7-84d27f75-400.webp);
+    background-image: url(https://i.ibb.co/4VXfcQ6 tumblr-60b30b85e6658b8b4db0b00c5e8d77f7-84d27f75-400.webp);
     background-size: 40%;
 }
       
 @keyframes shake{
-0% {
-transform:translate(1px,1px) rotate(0deg);
-}
+    0% {
+        transform:translate(1px,1px) rotate(0deg);
+    }
  
-10% {
-transform:translate(-1px,-2px) rotate(-1deg);
-}
+    10% {
+        transform:translate(-1px,-2px) rotate(-1deg);
+    }
  
-20% {
-transform:translate(-3px,0px) rotate(1deg);
-}
+    20% {
+        transform:translate(-3px,0px) rotate(1deg);
+    }
  
-30% {
-transform:translate(3px,2px) rotate(0deg);
-}
+    30% {
+        transform:translate(3px,2px) rotate(0deg);
+    }
  
-40% {
-transform:translate(1px,-1px) rotate(1deg);
-}
+    40% {
+        transform:translate(1px,-1px) rotate(1deg);
+    }
  
-50% {
-transform:translate(-1px,2px) rotate(-1deg);
-}
+    50% {
+        transform:translate(-1px,2px) rotate(-1deg);
+    }
  
-60% {
-transform:translate(-3px,1px) rotate(0deg);
-}
+    60% {
+        transform:translate(-3px,1px) rotate(0deg);
+    }
  
-70% {
-transform:translate(3px,1px) rotate(-1deg);
-}
+    70% {
+        transform:translate(3px,1px) rotate(-1deg);
+    }
  
-80% {
-transform:translate(-1px,-1px) rotate(1deg);
-}
+    80% {
+        transform:translate(-1px,-1px) rotate(1deg);
+    }
  
-90% {
-transform:translate(1px,2px) rotate(0deg);
-}
+    90% {
+        transform:translate(1px,2px) rotate(0deg);
+    }
  
-100% {
-transform:translate(1px,1px) rotate(0deg);
-}
+    100% {
+        transform:translate(1px,1px) rotate(0deg);
+    }
  
 }
