--- a/cottagecore.css
+++ b/cottagecore.css
@@ -213,7 +213,7 @@ a:hover {
 
 #sMsg, #block, #report, #add, #remove {
     color: #ffe194;
-    background-image: url(https://i.ibb.co/4VXfcQ6 tumblr-60b30b85e6658b8b4db0b00c5e8d77f7-84d27f75-400.webp);
+    background-image: url(https://i.ibb.co/41yvSQJ/tumblr-60b30b85e6658b8b4db0b00c5e8d77f7-84d27f75-400.webp);
     background-size: 40%;
 }
       
