--- a/webkinz.css
+++ b/webkinz.css
@@ -35,8 +35,13 @@ div#hSub {
 
 body {
     color: white;
-    background-color: #23408C;
-    background: url(https://i.imgur.com/pLW000f.png) no-repeat;
+    background: url(https://i.imgur.com/pLW000f.png) center center fixed;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    width: 100%;
+    height 100%;
     font-family: Comic Sans MS;
     text-shadow: 
                 /* first layer at 1px */
