--- a/webkinz.css
+++ b/webkinz.css
@@ -35,7 +35,7 @@ div#hSub {
 
 body {
     color: white;
-    background: url(https://i.imgur.com/pLW000f.png) center center fixed;
+    background: url(https://i.imgur.com/pLW000f.png) top center fixed;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
