--- a/webkinz.css
+++ b/webkinz.css
@@ -94,15 +94,18 @@ body {
     left: 0;
     bottom: -25px;
     color: #ffffff00;
-    background-size: 1450px;
     height: 270px;
-    width: 1450px;
     border: none;
     box-shadow: none;
     filter: drop-shadow(8px 9px 15px #00000044);
     z-index: 1000;
     font-size: 0px;
     opacity: 1;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    width: 100%;
 }
 
 .topLeft {
