--- a/webkinz.css
+++ b/webkinz.css
@@ -118,7 +118,7 @@ body {
     right: 760px;
 }
 
-.topLeft::after {
+.topLeft:not(.blogCard)::after {
     content: "";
     z-index: -1000;
     width: 500px;
@@ -134,6 +134,11 @@ body {
     width: 500px;
     height: 500px;
     overflow-y:scroll;
+    background-image: url(https://i.imgur.com/0pM5Z8R.png);
+    background-repeat: no-repeat;
+    position: fixed;
+    top: 200px;
+    right: 740px;
 }
 
 .topLeft.blogCard img{
