--- a/modern.css
+++ b/modern.css
@@ -76,6 +76,23 @@ a[href="#container"]:hover, a[href="#"]:hover {
     border: 1px solid #141414 !important;
 }
 
+.logo span::before {
+    text-indent: 0px;
+    float: left;
+    content: url(https://sophiezhng.github.io/my-space-windows-93-themes/assets/icons/myspace.svg);
+    margin-top: -3px;
+    margin-right: 8px;
+    width: 15px; 
+    height: 15px;
+    padding: 6px;
+    background-color: white;
+    border-radius: 5px;
+}
+
+div#hSub {
+    text-align: center;
+}
+
 .box:not(.topLeft.blogCard > .boxInfo.box, #footer, .comments), .short, #name, .tableRight {
     box-shadow: 0px -10px 100px -20px #00000080;
     border-radius: 15px;
