--- a/sweettooth.css
+++ b/sweettooth.css
@@ -86,6 +86,7 @@ body {
     background-size: cover;
     background-image: url(https://i.pinimg.com/originals/98/e4/45/98e44537de53f6fe6f908d04702b9a77.gif);
     border: 2px solid #FF69B4;
+    box-sizing: border-box;
 }
 
 .topRight {
@@ -94,7 +95,6 @@ body {
     background: #c7a6e0;
     position: relative;
     border: 2px solid #a682c2;
-    max-width: 550px;
 }
 
 div#footer {
