--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ html{
 body {
     padding:50px;
     font-size: 14px;
-    font-family: Roboto;
+    font-family: 'Roboto';
     margin: 8px;
     display: block;
     background-color: var(--main-background-color);
