--- a/95.css
+++ b/95.css
@@ -148,15 +148,16 @@ button:focus{outline:1px dotted #000;outline-offset:-4px}
 
 .boxButton {
     display: block;
-    width: 150px;
-    height: 25px;
+    width: 100%;
+    height: 50px;
+    padding: inherit;
     background: var(--button-color);
     box-shadow: var(--outset);
-    padding: 10px;
     text-align: center;
     color: var(--text-color);
     font-weight: bold;
-    line-height: 25px;
+    line-height: 50px;
+    box-sizing: border-box;
 }
 
 .boxInfo > a {
